<resources>
    <string name="app_name">Just Java</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="default_quantity">0</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="default_price">$0</string>
    <string name="order">Order</string>
    <string name="too_many_cups">You can\'t order more than 100 cups</string>
    <string name="too_few_cups">You can\'t order less than 1 cup</string>
</resources>
